--- a/giftyed/src/pages/profile-page/ProfilePage.scss
+++ b/giftyed/src/pages/profile-page/ProfilePage.scss
@@ -1,15 +1,15 @@
 .ProfilePage {
   &__content {
-    height: 100vh;
+    height: calc(100vh - 120px);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     &-info {
-      height: 55%;
+      height: 50%;
     }
 
     &-menu {
-      height: 45%;
+      height: 50%;
     }
   }
 }
