--- a/giftyed/src/components/profileInfo/ProfileInfo.css
+++ b/giftyed/src/components/profileInfo/ProfileInfo.css
@@ -3,6 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: row;
+  align-items: flex-start;
 }
 .profile-info__avatar {
   position: relative;
@@ -28,7 +29,6 @@
 .profile-info__content {
   width: 60%;
   display: flex;
-  align-items: center;
   color: #EDE7DC;
   font-family: "Inter", sans-serif;
 }
