--- a/giftyed/src/components/profileMenu/ProfileMenu.scss
+++ b/giftyed/src/components/profileMenu/ProfileMenu.scss
@@ -7,6 +7,9 @@
   height: 100%;
 
   &__upcomingBirthday {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
     &-header {
       font-family: "Inter", sans-serif;
@@ -16,21 +19,23 @@
     }
 
     &-followedUsers {
+      height: calc(100% - 57px);
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
+      align-items: center;
     }
   }
 
   &__calendar {
-    margin-top: 4vh;
-
+    display: flex;
+    align-items: center;
     .MuiDateCalendar-root {
       color: $whiteText;
       border-radius: 25px;
       background-color: $brown;
       font-family: "Inter", sans-serif;
-      height: 40vh;
-      width: 25vw;
+      height: 37vh;
+      width: 22vw;
       overflow-y: auto;
 
       &::-webkit-scrollbar {
@@ -39,6 +44,8 @@
     }
 
     .MuiPickersDay-root {
+      height: 3vw;
+      width: 3vw;
       color: $whiteText;
       font-family: "Inter", sans-serif;
       margin: 0;
@@ -47,6 +54,8 @@
     .MuiDayCalendar-weekDayLabel,
     .MuiPickersArrowSwitcher-button,
     .MuiPickersCalendarHeader-switchViewButton {
+      height: 3vw;
+      width: 3vw;
       margin: 0;
       color: $whiteText;
       font-family: "Inter", sans-serif !important;
@@ -56,8 +65,12 @@
       border: 3px solid $whiteText;
     }
 
-    .MuiPickersDay-root.Mui-selected {
+    .Mui-selected
+     {
       background-color: $orange !important;
+    }
+    .MuiPickersYear-root {
+    flex-basis: 20vw;
     }
   }
 
@@ -71,8 +84,11 @@
     }
 
     &-items {
+      height: calc(100% - 57px);
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
+      align-content: space-around;
+      justify-items: center;
     }
   }
 }
