--- a/giftyed/src/components/loginForm/LoginForm.css
+++ b/giftyed/src/components/loginForm/LoginForm.css
@@ -2,7 +2,7 @@
 .LoginForm {
   position: absolute;
   height: 100vh;
-  width: 600px;
+  width: 500px;
   background-color: #422D27;
   font-family: "Inter", sans-serif;
   overflow-y: auto;
@@ -19,7 +19,7 @@
 .LoginForm__logoName {
   cursor: pointer;
   text-align: center;
-  margin-top: 10vh;
+  margin-top: 7vh;
   font-size: 118px;
 }
 .LoginForm__logoName-one {
@@ -44,7 +44,7 @@
   margin: 0 0 5px 10px;
 }
 .LoginForm__container-login input, .LoginForm__container-password input {
-  height: 35px;
+  height: 25px;
   width: 60%;
   padding-left: 15px;
   color: #854b25;
@@ -52,27 +52,28 @@
   font-size: 18px;
   border: none;
   border-radius: 25px;
-  margin-bottom: 5vh;
+  margin-bottom: 15px;
 }
 .LoginForm__container-loginButton {
   text-align: center;
 }
 .LoginForm__container-loginButton button {
   cursor: pointer;
-  height: 50px;
-  width: 115px;
-  font-size: 24px;
+  height: 45px;
+  width: 120px;
+  font-size: 21px;
   color: #854b25;
   background-color: #F0AB55;
   font-family: "Inter", sans-serif;
   border: none;
   border-radius: 20px;
+  margin-top: 15px;
 }
 .LoginForm__container-loginButton button:hover {
   color: #EDE7DC;
 }
 .LoginForm .LoginForm__otherOptions {
-  margin: 10vh 40px 0 40px;
+  margin: 15vh 40px 0 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
