--- a/giftyed/src/components/loginForm/LoginForm.scss
+++ b/giftyed/src/components/loginForm/LoginForm.scss
@@ -3,7 +3,7 @@
 .LoginForm {
   position: absolute;
   height: 100vh;
-  width: 600px;
+  width: 500px;
   background-color: $brown;
   font-family: "Inter", sans-serif;
   overflow-y: auto;
@@ -22,7 +22,7 @@
   &__logoName {
     cursor: pointer;
     text-align: center;
-    margin-top: 10vh;
+    margin-top: 7vh;
     font-size: 118px;
 
     &-one {
@@ -52,7 +52,7 @@
       }
 
       input {
-        height: 35px;
+        height: 25px;
         width: 60%;
         padding-left: 15px;
         color: $lightBrown;
@@ -60,7 +60,7 @@
         font-size: 18px;
         border: none;
         border-radius: 25px;
-        margin-bottom: 5vh;
+        margin-bottom: 15px;
       }
     }
 
@@ -69,14 +69,15 @@
 
       button {
         cursor: pointer;
-        height: 50px;
-        width: 115px;
-        font-size: 24px;
+        height: 45px;
+        width: 120px;
+        font-size: 21px;
         color: $lightBrown;
         background-color: $orange;
         font-family: "Inter", sans-serif;
         border: none;
         border-radius: 20px;
+        margin-top: 15px;
       }
 
       button:hover {
@@ -86,7 +87,7 @@
   }
 
   .LoginForm__otherOptions {
-    margin: 10vh 40px 0 40px;
+    margin: 15vh 40px 0 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
