--- a/giftyed/src/components/peopleList/PeopleList.css
+++ b/giftyed/src/components/peopleList/PeopleList.css
@@ -1,6 +1,32 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap");
 .PeopleList {
-  height: calc(65vh - 15%);
+  height: calc(100vh - 260px);
   width: 45vw;
   border-radius: 15px;
   background-color: rgba(237, 231, 220, 0.7);
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+.PeopleList__container {
+  font-size: 28px;
+  color: #854b25;
+  font-family: "Inter", sans-serif;
+}
+.PeopleList__container-user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.PeopleList__container-user-photo {
+  width: 45%;
+  height: 45%;
+  border-radius: 50%;
+}
+.PeopleList__container-user-name {
+  font-family: "Inter", sans-serif;
+  font-size: 12px;
+  color: #854b25;
+  margin-top: 10px;
 }/*# sourceMappingURL=PeopleList.css.map */
