--- a/giftyed/src/components/peopleList/PeopleList.scss
+++ b/giftyed/src/components/peopleList/PeopleList.scss
@@ -1,6 +1,38 @@
+@import "../../utils/variables.scss";
+
 .PeopleList {
-  height: calc(65vh - 15%);
+  height: calc(100vh - 260px);
   width: 45vw;
   border-radius: 15px;
-  background-color: rgba(237, 231, 220, 0.70);
+  background-color: rgba(237, 231, 220, 0.7);
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 20px;
+  padding: 20px;
+
+  &__container {
+    font-size: 28px;
+    color: #854b25;
+    font-family: "Inter", sans-serif;
+
+    &-user {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      &-photo {
+        width: 45%;
+        height: 45%;
+        border-radius: 50%;
+      }
+
+      &-name {
+        font-family: "Inter", sans-serif;
+        font-size: 12px;
+        color: $lightBrown;
+        margin-top: 10px;
+      }
+    }
+  }
 }
