--- a/giftyed/src/components/registerForm/RegisterForm.scss
+++ b/giftyed/src/components/registerForm/RegisterForm.scss
@@ -3,7 +3,7 @@
 .RegisterForm {
   position: absolute;
   height: 100vh;
-  width: 600px;
+  width: 500px;
   background-color: $brown;
   overflow-y: auto;
 
@@ -21,7 +21,7 @@
   &__logoName {
     cursor: pointer;
     text-align: center;
-    margin-top: 10vh;
+    margin-top: 7vh;
     font-family: "Inter", sans-serif;
     font-size: 118px;
 
@@ -56,7 +56,7 @@
       }
 
       input {
-        height: 35px;
+        height: 25px;
         width: 60%;
         padding-left: 15px;
         color: $lightBrown;
@@ -65,7 +65,7 @@
         font-size: 18px;
         border: none;
         border-radius: 25px;
-        margin-bottom: 5vh;
+        margin-bottom: 15px;
       }
     }
 
@@ -74,14 +74,15 @@
 
       button {
         cursor: pointer;
-        height: 50px;
-        width: 130px;
-        font-size: 24px;
+        height: 45px;
+        width: 120px;
+        font-size: 21px;
         color: $lightBrown;
         background-color: $orange;
         font-family: "Inter", sans-serif;
         border: none;
         border-radius: 20px;
+        margin-top: 15px;
       }
 
       button:hover {
