--- a/giftyed/src/components/followedUser/FollowedUser.css
+++ b/giftyed/src/components/followedUser/FollowedUser.css
@@ -2,12 +2,12 @@
 .followed-user {
   text-align: center;
 }
-.followed-user__photo img {
+.followed-user__container-photo img {
   width: 35%;
   height: 35%;
   border-radius: 50%;
 }
-.followed-user__name p {
+.followed-user__container-name p {
   font-family: "Inter", sans-serif;
   font-size: 12px;
   color: #854b25;
