--- a/giftyed/src/components/followedUser/FollowedUser.scss
+++ b/giftyed/src/components/followedUser/FollowedUser.scss
@@ -2,21 +2,21 @@
 
 .followed-user {
   text-align: center;
-
-  &__photo {
-    
-    img {
-      width: 35%;
-      height: 35%;
-      border-radius: 50%;
+  &__container {
+    &-photo {
+      img {
+        width: 35%;
+        height: 35%;
+        border-radius: 50%;
+      }
     }
-  }
 
-  &__name {
-    p{
-      font-family: "Inter", sans-serif;
-      font-size: 12px;
-      color: $lightBrown;
+    &-name {
+      p {
+        font-family: "Inter", sans-serif;
+        font-size: 12px;
+        color: $lightBrown;
+      }
     }
   }
 }
