--- a/giftyed/src/components/myProfileInfo/MyProfileInfo.css
+++ b/giftyed/src/components/myProfileInfo/MyProfileInfo.css
@@ -1,38 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap");
-.profile-info {
+.my-profile-info {
   height: 100%;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
 }
-.profile-info__avatar {
+.my-profile-info__avatar {
   position: relative;
   width: 40%;
 }
-.profile-info__avatar-square {
+.my-profile-info__avatar-square {
   width: calc(10vw + 175px);
   position: absolute;
   top: 25%;
   height: 248px;
   background-color: #2C1E1A;
 }
-.profile-info__avatar-photo {
+.my-profile-info__avatar-photo {
   position: absolute;
   top: 25%;
   left: 15vw;
 }
-.profile-info__avatar-photo img {
+.my-profile-info__avatar-photo img {
   border-radius: 50%;
   width: 250px;
   height: 250px;
 }
-.profile-info__content {
+.my-profile-info__content {
   width: 60%;
   display: flex;
   color: #EDE7DC;
   font-family: "Inter", sans-serif;
 }
-.profile-info__content input {
+.my-profile-info__content input {
   font-family: "Inter", sans-serif;
   margin-bottom: 23px;
   color: #854b25;
@@ -42,14 +42,14 @@
   border-radius: 10px;
   padding-left: 10px;
 }
-.profile-info__content-info {
+.my-profile-info__content-info {
   width: 50%;
   height: 50%;
 }
-.profile-info__content-info button {
+.my-profile-info__content-info button {
   cursor: pointer;
   height: 25px;
-  width: 80px;
+  width: 65px;
   font-size: 14px;
   color: #854b25;
   background-color: #F0AB55;
@@ -59,18 +59,18 @@
   margin-right: 5px;
   margin-top: 10px;
 }
-.profile-info__content-info-name {
+.my-profile-info__content-info-name {
   font-size: 28px;
 }
-.profile-info__content-info-name-others {
+.my-profile-info__content-info-name-others {
   display: flex;
   flex-direction: column;
   margin-left: 25px;
 }
-.profile-info__content-info-name-others input {
+.my-profile-info__content-info-name-others input {
   width: 110px;
 }
-.profile-info__content-info-name-others-upload {
+.my-profile-info__content-info-name-others-upload {
   width: 120px;
   font-size: 12px !important;
   background-color: #F0AB55 !important;
@@ -79,16 +79,16 @@
   height: 25px;
   font-family: "Inter", sans-serif !important;
 }
-.profile-info__content-info-name-others-upload-uploadHiden {
+.my-profile-info__content-info-name-others-upload-uploadHiden {
   display: none;
 }
-.profile-info__content-interests {
+.my-profile-info__content-interests {
   width: 50%;
   height: 50%;
   font-size: 28px;
 }
-.profile-info__content-interests-container .MuiStack-root > :not(style) {
+.my-profile-info__content-interests-container .MuiStack-root > :not(style) {
   font-family: "Inter", sans-serif;
   background-color: #F0AB55;
   color: #854b25;
-}/*# sourceMappingURL=ProfileInfo.css.map */
+}/*# sourceMappingURL=MyProfileInfo.css.map */
