--- a/giftyed/src/components/followedUser/FollowedUser.scss
+++ b/giftyed/src/components/followedUser/FollowedUser.scss
@@ -2,11 +2,20 @@
 
 .followed-user {
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 30vh;
+
   &__container {
+    width: 28%;
+    margin: 11px;
+    cursor: pointer;
+
     &-photo {
       img {
-        width: 35%;
-        height: 35%;
+        max-width: 35%;
+        height: auto;
         border-radius: 50%;
       }
     }
