--- a/giftyed/src/components/profileMenu/ProfileMenu.css
+++ b/giftyed/src/components/profileMenu/ProfileMenu.css
@@ -17,9 +17,19 @@
   text-align: center;
 }
 .profile-menu__upcomingBirthday-followedUsers {
-  height: calc(100% - 57px);
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
+  height: calc(100% - 95px);
+  overflow-y: auto;
+}
+.profile-menu__upcomingBirthday-followedUsers::-webkit-scrollbar {
+  width: 10px;
+}
+.profile-menu__upcomingBirthday-followedUsers::-webkit-scrollbar-thumb {
+  background-color: #F0AB55;
+  border-radius: 20px;
+}
+.profile-menu__upcomingBirthday-followedUsers::-webkit-scrollbar-track {
+  background-color: rgba(237, 231, 220, 0.7);
+  border-radius: 20px;
 }
 .profile-menu__calendar {
   display: flex;
@@ -30,7 +40,7 @@
   border-radius: 25px;
   background-color: #422D27;
   font-family: "Inter", sans-serif;
-  height: 37vh;
+  height: 39vh;
   width: 22vw;
   overflow-y: auto;
 }
@@ -65,16 +75,33 @@
 .profile-menu__calendar .MuiPickersYear-root {
   flex-basis: 20vw;
 }
+.profile-menu__wishList {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: center;
+}
 .profile-menu__wishList-header {
   font-family: "Inter", sans-serif;
   font-size: 18px;
   color: #854b25;
-  text-align: center;
 }
 .profile-menu__wishList-items {
-  height: calc(100% - 57px);
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
-  align-content: space-around;
-  justify-items: center;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  height: 30vh;
+  overflow-y: auto;
+  justify-content: space-between;
+}
+.profile-menu__wishList-items::-webkit-scrollbar {
+  width: 10px;
+}
+.profile-menu__wishList-items::-webkit-scrollbar-thumb {
+  background-color: #F0AB55;
+  border-radius: 20px;
+}
+.profile-menu__wishList-items::-webkit-scrollbar-track {
+  background-color: rgba(237, 231, 220, 0.7);
+  border-radius: 20px;
 }/*# sourceMappingURL=ProfileMenu.css.map */
