--- a/giftyed/src/components/wishItem/WishItem.scss
+++ b/giftyed/src/components/wishItem/WishItem.scss
@@ -1,11 +1,16 @@
 @import "../../utils/variables.scss";
 
 .wish-item{
+    text-align: -webkit-center;
+    width: 20%;
+    margin: 11px;
+    cursor: pointer;
 
     &__square{
-        width: 6vw;
-        height: 6vw;
-        border-radius: 1.5vw;
+        max-width: 50px;
+        height: 50px;
+        border-radius: 20%;
         background-color: $brown;
+        
     }
 }
