--- a/giftyed/src/components/searchList/SearchList.css
+++ b/giftyed/src/components/searchList/SearchList.css
@@ -1,8 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap");
 .SearchList {
   width: 95vw;
-  height: calc(65vh - 50px);
+  height: calc(100vh - 250px);
   font-family: "Inter", sans-serif;
   border-radius: 25px;
   background-color: rgba(233, 202, 192, 0.7);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.SearchList__item {
+  height: 15%;
+  width: 20%;
+  text-align: center;
+  margin: 10px;
+}
+.SearchList__item-photo {
+  width: 50%;
+  border-radius: 20px;
+}
+.SearchList__item-name {
+  font-size: 12px;
+  color: #854b25;
+  margin: 0;
 }/*# sourceMappingURL=SearchList.css.map */
