--- a/giftyed/src/components/searchList/SearchList.scss
+++ b/giftyed/src/components/searchList/SearchList.scss
@@ -1,9 +1,29 @@
 @import "../../utils/variables.scss";
 
-.SearchList{
-    width: 95vw;
-    height: calc(65vh - 50px);
-    font-family: "Inter", sans-serif;
-    border-radius: 25px;
-    background-color: rgba(233, 202, 192, 0.7);
+.SearchList {
+  width: 95vw;
+  height: calc(100vh - 250px);
+  font-family: "Inter", sans-serif;
+  border-radius: 25px;
+  background-color: rgba(233, 202, 192, 0.7);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  &__item {
+    height: 15%;
+    width: 20%;
+    text-align: center;
+    margin: 10px;
+
+    &-photo {
+      width: 50%;
+      border-radius: 20px;
+    }
+    &-name {
+      font-size: 12px;
+      color: $lightBrown;
+      margin: 0;
+    }
+  }
 }
