--- a/giftyed/src/components/searchList/SearchList.css
+++ b/giftyed/src/components/searchList/SearchList.css
@@ -14,10 +14,24 @@
   width: 20%;
   text-align: center;
   margin: 10px;
+  position: relative;
 }
 .SearchList__item-photo {
   width: 50%;
   border-radius: 20px;
+  transition: opacity 0.3s ease-out;
+  position: relative;
+}
+.SearchList__item-photo:hover {
+  opacity: 0.5;
+}
+.SearchList__item-photo + .SearchList__item-label {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #854b25;
+  font-size: 16px;
 }
 .SearchList__item-name {
   font-size: 12px;
