--- a/giftyed/src/components/wishItem/WishItem.css
+++ b/giftyed/src/components/wishItem/WishItem.css
@@ -1,13 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap");
 .wish-item {
-  text-align: -webkit-center;
-  width: 20%;
-  margin: 11px;
-  cursor: pointer;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-.wish-item__square {
-  max-width: 50px;
-  height: 50px;
+.wish-item__item {
+  width: 28%;
+  margin: 10px;
   border-radius: 20%;
-  background-color: #422D27;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.wish-item__item-square {
+  transition: opacity 0.3s ease-out;
+}
+.wish-item__item-square:hover {
+  opacity: 0.5;
+}
+.wish-item__item-square-photo {
+  max-width: 60%;
+  height: auto;
+  border-radius: 20%;
+}
+.wish-item__item-name {
+  font-size: 12px;
+  font-family: "Inter", sans-serif;
+  color: #854b25;
+  margin: 0;
+}
+.wish-item__item.removed {
+  opacity: 0;
+  height: 0;
+  margin: 0;
+  padding: 0;
 }/*# sourceMappingURL=WishItem.css.map */
