--- a/giftyed/src/components/wishItem/WishItem.scss
+++ b/giftyed/src/components/wishItem/WishItem.scss
@@ -1,16 +1,45 @@
 @import "../../utils/variables.scss";
 
-.wish-item{
-    text-align: -webkit-center;
-    width: 20%;
-    margin: 11px;
-    cursor: pointer;
+.wish-item {
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 
-    &__square{
-        max-width: 50px;
-        height: 50px;
+  &__item {
+    width: 28%;
+    margin: 10px;
+    border-radius: 20%;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+
+    &-square {
+        transition: opacity 0.3s ease-out;
+
+        &:hover {
+          opacity: 0.5;
+        }
+    
+      &-photo {
+        max-width: 60%;
+        height: auto;
         border-radius: 20%;
-        background-color: $brown;
-        
+      }
     }
+
+    &-name {
+      font-size: 12px;
+      font-family: "Inter", sans-serif;
+      color: $lightBrown;
+      margin: 0;
+    }
+
+    &.removed {
+      opacity: 0;
+      height: 0;
+      margin: 0;
+      padding: 0;
+    }
+  }
 }
