--- a/giftyed/src/components/profileInfo/ProfileInfo.scss
+++ b/giftyed/src/components/profileInfo/ProfileInfo.scss
@@ -64,6 +64,10 @@
         border-radius: 7px;
         margin-right: 5px;
         margin-top: 10px;
+
+        &:hover {
+          color: $whiteText;
+        }
       }
 
       &-name {
@@ -104,6 +108,24 @@
           font-family: "Inter", sans-serif;
           background-color: $orange;
           color: $lightBrown;
+        }
+      }
+
+      button {
+        cursor: pointer;
+        height: 35px;
+        width: 80px;
+        font-size: 14px;
+        color: $orange;
+        background-color: $darkBrown;
+        font-family: "Inter", sans-serif;
+        border: none;
+        border-radius: 7px;
+        margin-right: 5px;
+        margin-top: 10px;
+
+        &:hover {
+          color: $whiteText;
         }
       }
     }
