--- a/giftyed/src/components/followedUser/FollowedUser.scss
+++ b/giftyed/src/components/followedUser/FollowedUser.scss
@@ -5,10 +5,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  height: 30vh;
+  height: 110px;
 
   &__container {
-    width: 28%;
+    width: 30%;
     margin: 11px;
     cursor: pointer;
 
