--- a/giftyed/src/components/peopleList/PeopleList.css
+++ b/giftyed/src/components/peopleList/PeopleList.css
@@ -13,6 +13,8 @@
   font-size: 28px;
   color: #854b25;
   font-family: "Inter", sans-serif;
+  height: 110px;
+  cursor: pointer;
 }
 .PeopleList__container-user {
   display: flex;
