--- a/giftyed/src/components/peopleList/PeopleList.scss
+++ b/giftyed/src/components/peopleList/PeopleList.scss
@@ -15,6 +15,8 @@
     font-size: 28px;
     color: #854b25;
     font-family: "Inter", sans-serif;
+    height: 110px;
+    cursor: pointer;
 
     &-user {
       display: flex;
