--- a/giftyed/src/components/myProfileInfo/MyProfileInfo.scss
+++ b/giftyed/src/components/myProfileInfo/MyProfileInfo.scss
@@ -3,55 +3,54 @@
 .my-profile-info {
   height: 100%;
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-
-  &__avatar {
-    position: relative;
-    width: 40%;
-
-    &-square {
-      width: calc(10vw + 175px);
-      position: absolute;
-      top: 25%;
-      height: 248px;
-      background-color: $darkBrown;
-    }
-
-    &-photo {
-      position: absolute;
-      top: 25%;
-      left: 15vw;
-
-      img {
-        border-radius: 50%;
-        width: 250px;
-        height: 250px;
-      }
-    }
-  }
-
+  align-items: center;
   &__content {
-    width: 60%;
+    width: 100vw;
     display: flex;
+    flex-wrap: wrap;
     color: $whiteText;
     font-family: "Inter", sans-serif;
 
     input {
       font-family: "Inter", sans-serif;
-      margin-bottom: 23px;
+      height: 25px;
+      margin-bottom: 45px;
       color: $lightBrown;
       background-color: $orange;
       font-size: 14px;
       border: none;
-      border-radius: 10px;
+      border-radius: 25px;
       padding-left: 10px;
     }
 
-    &-info {
-      width: 50%;
-      height: 50%;
+    &-avatar {
+      min-width: 40%;
+      &-square {
+        width: calc(40vw - 155px);
+        height: 250px;
+        position: absolute;
+        z-index: -1;
+        background-color: #2c1e1a;
+      }
 
+      &-photo {
+        display: flex;
+        justify-content: flex-end;
+        padding-right: 2vw;
+        img {
+          border-radius: 50%;
+          width: 250px;
+          height: 250px;
+        }
+      }
+    }
+
+    &-info {
+      min-width: 30%;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      justify-content: space-between;
       button {
         cursor: pointer;
         height: 25px;
@@ -68,47 +67,40 @@
 
       &-name {
         font-size: 28px;
-
         &-others {
+          padding-left: 15px;
           display: flex;
           flex-direction: column;
-          margin-left: 25px;
-
+          p {
+            padding: 5px;
+          }
           input {
             width: 110px;
-            margin-bottom: 5%;
+            height: 35px;
+            border-radius: 25px;
           }
-
           &-upload {
             width: 120px;
             font-size: 12px !important;
             background-color: $orange !important;
             color: $lightBrown !important;
             border-radius: 25px !important;
-            height: 25px;
+            height: 35px;
             font-family: "Inter", sans-serif !important;
             &-uploadHiden {
               display: none;
             }
           }
-          &-date {
-            margin: 10% 0;
-          }
         }
-      }
-
-      &-edit {
-        margin-top: 10%;
       }
     }
 
     &-interests {
-      width: 50%;
-      height: 50%;
       font-size: 28px;
+      min-width: 30%;
 
-      &-container {        
-        
+      &-container {
+        width: 25vw;
         .MuiStack-root {
           display: flex;
           flex-direction: row;
@@ -120,7 +112,6 @@
           color: $lightBrown;
           margin-top: 10px;
         }
-
       }
     }
   }
