--- a/giftyed/src/components/profileInfo/ProfileInfo.scss
+++ b/giftyed/src/components/profileInfo/ProfileInfo.scss
@@ -3,59 +3,46 @@
 .profile-info {
   height: 100%;
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-
-  &__avatar {
-    position: relative;
-    width: 40%;
-
-    &-square {
-      width: calc(10vw + 175px);
-      position: absolute;
-      top: 25%;
-      height: 248px;
-      background-color: $darkBrown;
-    }
-
-    &-photo {
-      position: absolute;
-      top: 25%;
-      left: 15vw;
-
-      img {
-        border-radius: 50%;
-        width: 250px;
-        height: 250px;
-      }
-    }
-  }
-
+  align-items: center;
   &__content {
-    width: 60%;
+    width: 100vw;
     display: flex;
+    flex-wrap: wrap;
     color: $whiteText;
     font-family: "Inter", sans-serif;
 
-    input {
-      font-family: "Inter", sans-serif;
-      margin-bottom: 23px;
-      color: $lightBrown;
-      background-color: $orange;
-      font-size: 14px;
-      border: none;
-      border-radius: 10px;
-      padding-left: 10px;
+    &-avatar {
+      min-width: 40%;
+      &-square {
+        width: calc(40vw - 155px);
+        height: 250px;
+        position: absolute;
+        z-index: -1;
+        background-color: #2c1e1a;
+      }
+
+      &-photo {
+        display: flex;
+        justify-content: flex-end;
+        padding-right: 2vw;
+        img {
+          border-radius: 50%;
+          width: 250px;
+          height: 250px;
+        }
+      }
     }
 
     &-info {
-      width: 50%;
-      height: 50%;
-
+      min-width: 30%;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      justify-content: space-between;
       button {
         cursor: pointer;
         height: 25px;
-        width: 80px;
+        width: 75px;
         font-size: 14px;
         color: $lightBrown;
         background-color: $orange;
@@ -74,34 +61,19 @@
         font-size: 28px;
 
         &-others {
+          padding-left: 15px;
           display: flex;
           flex-direction: column;
-          margin-left: 25px;
-
-          input {
-            width: 110px;
-          }
-
-          &-upload {
-            width: 120px;
-            font-size: 12px !important;
-            background-color: $orange !important;
-            color: $lightBrown !important;
-            border-radius: 25px !important;
-            height: 25px;
-            font-family: "Inter", sans-serif !important;
-            &-uploadHiden {
-              display: none;
-            }
+          p {
+            padding: 5px;
           }
         }
       }
     }
 
     &-interests {
-      width: 50%;
-      height: 50%;
       font-size: 28px;
+      min-width: 30%;
 
       &-container {
         .MuiStack-root > :not(style) {
