--- a/giftyed/src/pages/search-page/SearchPage.scss
+++ b/giftyed/src/pages/search-page/SearchPage.scss
@@ -1,12 +1,11 @@
 @import "../../utils/variables.scss";
 
 .SearchPage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   &__search {
-
     input {
       height: 25px;
       width: 250px;
@@ -28,6 +27,11 @@
   &__categories {
     width: 50%;
     margin: 5px;
+    .MuiStack-root {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
   }
 
   &__wavesTwoImg {
