--- a/giftyed/src/components/myProfileInfo/MyProfileInfo.css
+++ b/giftyed/src/components/myProfileInfo/MyProfileInfo.css
@@ -22,6 +22,17 @@
   border-radius: 25px;
   padding-left: 10px;
 }
+.my-profile-info__content-desiredGifts-box {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.my-profile-info__content-desiredGifts-box img {
+  width: 30px;
+  height: 30px;
+}
 .my-profile-info__content-avatar {
   min-width: 40%;
 }
