--- a/giftyed/src/components/myProfileInfo/MyProfileInfo.scss
+++ b/giftyed/src/components/myProfileInfo/MyProfileInfo.scss
@@ -23,6 +23,21 @@
       padding-left: 10px;
     }
 
+    &-desiredGifts{
+      
+      &-box{
+      width: 50px;
+      height: 50px;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      img{
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
+
     &-avatar {
       min-width: 40%;
       &-square {
