--- a/giftyed/src/components/profileInfo/ProfileInfo.scss
+++ b/giftyed/src/components/profileInfo/ProfileInfo.scss
@@ -101,5 +101,26 @@
         }
       }
     }
+    &-desiredGifts {
+      &-header {
+        
+      }
+
+      &-box {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        
+        &-item {
+          font-size: 11px;
+          img {
+            width: 30px;
+            height: 30px;
+          }
+        }
+      }
+    }
   }
 }
