--- a/giftyed/src/components/myProfileInfo/MyProfileInfo.scss
+++ b/giftyed/src/components/myProfileInfo/MyProfileInfo.scss
@@ -4,10 +4,11 @@
   height: 100%;
   display: flex;
   align-items: center;
+
   &__content {
     width: 100vw;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     color: $whiteText;
     font-family: "Inter", sans-serif;
 
@@ -23,25 +24,10 @@
       padding-left: 10px;
     }
 
-    &-desiredGifts{
-      
-      &-box{
-      width: 50px;
-      height: 50px;
-      display: flex;
-      flex-direction: column;
-      flex-wrap: wrap;
-      img{
-        width: 30px;
-        height: 30px;
-      }
-    }
-  }
-
     &-avatar {
-      min-width: 40%;
+      min-width: 30%;
       &-square {
-        width: calc(40vw - 155px);
+        width: calc(30vw - 155px);
         height: 250px;
         position: absolute;
         z-index: -1;
@@ -61,11 +47,9 @@
     }
 
     &-info {
-      min-width: 30%;
+      min-width: 25%;
       display: flex;
       flex-direction: column;
-      flex-wrap: nowrap;
-      justify-content: space-between;
       button {
         cursor: pointer;
         height: 25px;
@@ -78,10 +62,18 @@
         border-radius: 7px;
         margin-right: 5px;
         margin-top: 10px;
+
+        &:hover {
+          color: $whiteText;
+        }
       }
 
       &-name {
         font-size: 28px;
+        p {
+          margin: 10px;
+        }
+
         &-others {
           padding-left: 15px;
           display: flex;
@@ -112,10 +104,12 @@
 
     &-interests {
       font-size: 28px;
-      min-width: 30%;
+      min-width: 25%;
+      p {
+        margin: 10px;
+      }
 
       &-container {
-        width: 25vw;
         .MuiStack-root {
           display: flex;
           flex-direction: row;
@@ -126,6 +120,43 @@
           background-color: $orange;
           color: $lightBrown;
           margin-top: 10px;
+        }
+      }
+    }
+
+    &-desiredGifts {
+      min-width: 20%;
+
+      &-header {
+        text-align: center;
+        p {
+          font-size: 28px;
+          margin: 10px;
+        }
+      }
+
+      &-box {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        &-item {
+          cursor: pointer;
+          text-align: center;
+          font-size: 11px;
+          width: 100px;
+          img {
+            width: 45px;
+            border-radius: 10px;
+            transition: opacity 0.3s ease-out;
+
+            &:hover {
+              opacity: 0.5;
+            }
+          }
+
+          p {
+            margin: 5px;
+          }
         }
       }
     }
