--- a/giftyed/src/components/profileInfo/ProfileInfo.css
+++ b/giftyed/src/components/profileInfo/ProfileInfo.css
@@ -7,15 +7,15 @@
 .profile-info__content {
   width: 100vw;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   color: #EDE7DC;
   font-family: "Inter", sans-serif;
 }
 .profile-info__content-avatar {
-  min-width: 40%;
+  min-width: 30%;
 }
 .profile-info__content-avatar-square {
-  width: calc(40vw - 155px);
+  width: calc(30vw - 155px);
   height: 250px;
   position: absolute;
   z-index: -1;
@@ -32,11 +32,9 @@
   height: 250px;
 }
 .profile-info__content-info {
-  min-width: 30%;
+  min-width: 25%;
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-between;
 }
 .profile-info__content-info button {
   cursor: pointer;
@@ -57,6 +55,9 @@
 .profile-info__content-info-name {
   font-size: 28px;
 }
+.profile-info__content-info-name p {
+  margin: 10px;
+}
 .profile-info__content-info-name-others {
   padding-left: 15px;
   display: flex;
@@ -67,12 +68,21 @@
 }
 .profile-info__content-interests {
   font-size: 28px;
-  min-width: 30%;
+  min-width: 25%;
+}
+.profile-info__content-interests p {
+  margin: 10px;
+}
+.profile-info__content-interests-container .MuiStack-root {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .profile-info__content-interests-container .MuiStack-root > :not(style) {
   font-family: "Inter", sans-serif;
   background-color: #F0AB55;
   color: #854b25;
+  margin-top: 10px;
 }
 .profile-info__content-interests button {
   cursor: pointer;
@@ -90,17 +100,35 @@
 .profile-info__content-interests button:hover {
   color: #EDE7DC;
 }
+.profile-info__content-desiredGifts {
+  min-width: 20%;
+}
+.profile-info__content-desiredGifts-header {
+  text-align: center;
+}
+.profile-info__content-desiredGifts-header p {
+  font-size: 28px;
+  margin: 10px;
+}
 .profile-info__content-desiredGifts-box {
-  width: 50px;
-  height: 50px;
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .profile-info__content-desiredGifts-box-item {
+  cursor: pointer;
+  text-align: center;
   font-size: 11px;
+  width: 100px;
 }
 .profile-info__content-desiredGifts-box-item img {
-  width: 30px;
-  height: 30px;
+  width: 45px;
+  border-radius: 10px;
+  transition: opacity 0.3s ease-out;
+}
+.profile-info__content-desiredGifts-box-item img:hover {
+  opacity: 0.5;
+}
+.profile-info__content-desiredGifts-box-item p {
+  margin: 5px;
 }/*# sourceMappingURL=ProfileInfo.css.map */
