--- a/giftyed/src/components/profileInfo/ProfileInfo.scss
+++ b/giftyed/src/components/profileInfo/ProfileInfo.scss
@@ -4,17 +4,18 @@
   height: 100%;
   display: flex;
   align-items: center;
+
   &__content {
     width: 100vw;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     color: $whiteText;
     font-family: "Inter", sans-serif;
 
     &-avatar {
-      min-width: 40%;
+      min-width: 30%;
       &-square {
-        width: calc(40vw - 155px);
+        width: calc(30vw - 155px);
         height: 250px;
         position: absolute;
         z-index: -1;
@@ -25,6 +26,7 @@
         display: flex;
         justify-content: flex-end;
         padding-right: 2vw;
+
         img {
           border-radius: 50%;
           width: 250px;
@@ -34,11 +36,9 @@
     }
 
     &-info {
-      min-width: 30%;
+      min-width: 25%;
       display: flex;
       flex-direction: column;
-      flex-wrap: nowrap;
-      justify-content: space-between;
       button {
         cursor: pointer;
         height: 25px;
@@ -59,6 +59,9 @@
 
       &-name {
         font-size: 28px;
+        p {
+          margin: 10px;
+        }
 
         &-others {
           padding-left: 15px;
@@ -73,13 +76,23 @@
 
     &-interests {
       font-size: 28px;
-      min-width: 30%;
+      min-width: 25%;
+      p {
+        margin: 10px;
+      }
 
       &-container {
+        .MuiStack-root {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+        }
+
         .MuiStack-root > :not(style) {
           font-family: "Inter", sans-serif;
           background-color: $orange;
           color: $lightBrown;
+          margin-top: 10px;
         }
       }
 
@@ -101,23 +114,39 @@
         }
       }
     }
+
     &-desiredGifts {
+      min-width: 20%;
+
       &-header {
-        
+        text-align: center;
+        p {
+          font-size: 28px;
+          margin: 10px;
+        }
       }
 
       &-box {
-        width: 50px;
-        height: 50px;
         display: flex;
-        flex-direction: column;
         flex-wrap: wrap;
-        
+        justify-content: center;
         &-item {
+          cursor: pointer;
+          text-align: center;
           font-size: 11px;
+          width: 100px;
           img {
-            width: 30px;
-            height: 30px;
+            width: 45px;
+            border-radius: 10px;
+            transition: opacity 0.3s ease-out;
+
+            &:hover {
+              opacity: 0.5;
+            }
+          }
+
+          p {
+            margin: 5px;
           }
         }
       }
